<resources>
    <string name="app_name">Ю.К.</string>
    <string name="rashet">Расчет госпошлины</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="About_text">Данная программа предназначена для произведения различных рассчетов, таких как: государственная пошлина, неустойка и др. Программа будет дополняться различными расчетами.
    </string>

    <!-- TODO: Podrobnii raschet -->
    <string name="one_one">Физическое лицо</string>

    <string name="one_one_one">Исковое заявление имущественного характера, подлежащее оценке</string>
    <string name="one_one_two">Исковое заявление имущественного характера, не подлежащее оценке</string>
    <string name="one_one_three">Исковое заявление неимущественного характера</string>
    <string name="one_one_four">Заявление о выдаче судебного приказа</string>
    <string name="one_one_five">Апелляционная или кассационная жалоба</string>
    <string name="one_one_six">Надзорная жалоба</string>
    <string name="one_one_seven">Исковое заявление о расторжении брака</string>
    <string name="one_one_eight">Заявление об оспаривании нормативных правовых актов государственных органов, Банка России, государственных внебюджетных фондов, ОМС, Государственных корпораций, должностных лиц, а также заявления об оспаривании ненормативных правовых актов Президента РФ, Федерального Собрания, Правительства РФ, Правительственной комиссии по контролю за осуществлением иностранных инвестиций в РФ</string>
    <string name="one_one_nine">Заявление об оспаривании актов федеральных органов исполнительной власти, иных федеральных государственных органов, Центрального банка Российской Федерации, государственных внебюджетных фондов, содержащих разъяснения законодательства и обладающих нормативными свойствами</string>
    <string name="one_one_ten">Заявление о признании ненормативного правового акта недействительным и о признании решений и действий (бездействия) государственных органов, органов местного самоуправления, иных органов, должностных лиц незаконными</string>
    <string name="one_one_eleven">Заявление по делам особого производства</string>
    <string name="one_one_twelve">Заявление о выдаче исполнительных листов на принудительное исполнение решений третейского суда</string>
    <string name="one_one_thirteen">Заявление об обеспечении иска, рассматриваемого в третейском суде</string>
    <string name="one_one_fourteen">Заявление об отмене решения третейского суда</string>
    <string name="one_one_fifteen">Заявление по делам о взыскании алиментов</string>
    <string name="one_one_sixteen">Заявление по делам о взыскании алиментов как на содержание детей, так и на содержание истца</string>
    <string name="one_one_seventeen">Заявление о присуждении компенсации за нарушение права на судопроизводство</string>


    <string name="one_two">Юридическое лицо</string>

    <string name="two_one">Исковое заявление имущественного характера, подлежащее оценке</string>
    <string name="two_two">Исковое заявление имущественного характера, не подлежащее оценке</string>
    <string name="two_three">Исковое заявление неимущественного характера</string>
    <string name="two_four">Заявление о выдаче судебного приказа</string>
    <string name="two_five">Апелляционная или кассационная жалоба</string>
    <string name="two_six">Надзорная жалоба</string>
    <string name="two_seven">Заявление об оспаривании нормативных правовых актов государственных органов, Банка России, государственных внебюджетных фондов, ОМС, Государственных корпораций, должностных лиц, а также заявления об оспаривании ненормативных правовых актов Президента РФ, Федерального Собрания, Правительства РФ, Правительственной комиссии по контролю за осуществлением иностранных инвестиций в РФ</string>
    <string name="two_eight">Заявление об оспаривании актов федеральных органов исполнительной власти, иных федеральных государственных органов, Центрального банка Российской Федерации, государственных внебюджетных фондов, содержащих разъяснения законодательства и обладающих нормативными свойствами</string>
    <string name="two_nine">Заявление о признании ненормативного правового акта недействительным и о признании решений и действий (бездействия) государственных органов, органов местного самоуправления, иных органов, должностных лиц незаконными</string>
    <string name="two_ten">Заявление по делам особого производства</string>
    <string name="two_eleven">Заявление о выдаче исполнительных листов на принудительное исполнение решений третейского суда</string>
    <string name="two_twelve">Заявление об обеспечении иска, рассматриваемого в третейском суде</string>
    <string name="two_thirteen">Заявление об отмене решения третейского суда</string>
    <string name="two_fourteen">Заявление о присуждении компенсации за нарушение права на судопроизводство</string>

    <!-- TODO: Arbitrash fiz ur -->
    <string name="three_one">Заявление имущественного характера</string>
    <string name="three_two">Заявление о выдаче судебного приказа</string>
    <string name="three_three">Заявление неимущественного характера</string>
    <string name="three_four">Апелляционная и (или) кассационная жалоба </string>
    <string name="three_five">Надзорная жалоба</string>
    <string name="three_six">Прочие заявления</string>


    <!-- TODO: Arbitrash fiz ur 2 -->
    <string name="three_one_one">Корпоративные споры</string>
    <string name="three_one_two">Неисполнение обязательств по договору</string>
    <string name="three_one_three">Оспаривание ненормативных правовых актов, решений и действий</string>
    <string name="three_one_tour">Обеспечение иска</string>
    <string name="three_one_fife">Установление юридически значимых фактов</string>
    <string name="three_one_six">Выдача исполнительных листов</string>
    <string name="three_one_seven">Отмена решения третейского суда</string>
    <string name="three_one_eight">Заявление о признании должника несостоятельным (банкротом)</string>
    <string name="three_one_nine">Заявление о признании и приведении в исполнение решения иностранного суда, иностранного арбитражного решения</string>
    <string name="three_one_ten">Заявление об оспаривании актов, содержащих разъяснения законодательства и обладающих нормативными свойствами</string>
    <string name="three_one_eleven">Заявление об оспаривание актов в сфере патентных прав, содержащих разъяснения законодательства и обладающих нормативными свойствами</string>
    <string name="three_one_twelve">Иные заявления неимущественного характера, в том числе заявления о признании права, заявления о присуждении к исполнению обязанности в натуре</string>

    <!-- TODO: ArbitrashPodrob-->
    <string name="three_one_one1">Споры, связанные с деятельностью хозяйственных товариществ и обществ</string>
    <string name="three_one_two2">Невыполнение стороной договора любого из своих обязательств, включая ненадлежащее исполнение или просрочку исполнения договора</string>
    <string name="three_one_three3">Признание ненормативного правового акта недействительным, признание решений и действий (бездействия) незаконными</string>
    <string name="three_one_tour4">Принятие мер, обеспечивающих реальность исполнения будущего судебного или арбитражного решения</string>
    <string name="three_one_fife5">Под фактами, имеющими значение для возникновения, изменения или прекращения прав юридических лиц и граждан-предпринимателей, подразумеваются обстоятельства, определенным образом влияющие на динамику правоотношений, но не сами правоотношения</string>
    <string name="three_one_six6">Выдача документа на основании решений, приговоров и иных судебных актов, в котором приводится резолютивная часть решения, указывается наименование суда и дело, по которому выдан лист, даты вынесения решения и вступления в законную силу, дата выдачи самого листа</string>
    <string name="three_one_seven7">Отмена решения третейского суда в связи с нарушениями, допущенными при рассмотрении дела</string>
    <string name="three_one_eight8">Признание должника банкротом по обращению самого должника, кредитора и иных заинтересованных лиц</string>
    <string name="three_one_nine9">Заявление о признании и приведении в исполнение решения иностранного суда, иностранного арбитражного решения</string>
    <string name="three_one_ten10">Оспаривание актов федеральных органов исполнительной власти, иных федеральных государственных органов, Центрального банка Российской Федерации, государственных внебюджетных фондов, содержащих разъяснения законодательства и обладающих нормативными свойствами</string>
    <string name="three_one_eleven11">Оспаривание актов федеральных органов исполнительной власти в сфере патентных прав и прав на селекционные достижения, права на топологии интегральных микросхем, права на секреты производства (ноу-хау), права на средства индивидуализации юридических лиц, товаров, работ, услуг и предприятий, права использования результатов интеллектуальной деятельности в составе единой технологии, содержащих разъяснения законодательства и обладающих нормативными свойствами</string>
    <string name="three_one_twelve12">Иные заявления неимущественного характера, в том числе заявления о признании права, заявления о присуждении к исполнению обязанности в натуре</string>

</resources>