<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="Выберите категорию"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/myview4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <RadioGroup
            android:id="@+id/radioGroupFife"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/threfife1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_one" />

            <RadioButton
                android:id="@+id/threefife2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_two" />

            <RadioButton
                android:id="@+id/threefife3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_three" />

            <RadioButton
                android:id="@+id/threefife4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_tour" />

            <RadioButton
                android:id="@+id/threefife5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_fife" />

            <RadioButton
                android:id="@+id/threefife6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_six" />

            <RadioButton
                android:id="@+id/threefife7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_seven" />

            <RadioButton
                android:id="@+id/threefife8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_eight" />

            <RadioButton
                android:id="@+id/threefife9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_nine" />

            <RadioButton
                android:id="@+id/threefife10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_ten" />

            <RadioButton
                android:id="@+id/threefife11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_eleven" />

            <RadioButton
                android:id="@+id/threefife12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_one_twelve" />

        </RadioGroup>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>